--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Hello World</title>
+  <meta charset ="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
   <script src="https://kit.fontawesome.com/7e7bae4e29.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/assets/css/uas.css">
