--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
     </section>
 
     <!-- Nav Bar -->
-
+ <div class"row">
+<div class="col-lg-6">
 <div class="ketiga">
   <h6>The “<span id="span1">HELLO WORLD</span>” program is the first step towards learning any programming language <br>
     and also one of the simplest programs you will learn. All you have to do is display the <br>
     message “<span id="span1">HELLO WORLD</span>” on the screen</h6>
 </div>
+  </div>
+   </div>
 <div class="wrapper">
   <ul class="dynamic-txts">
     <li><span>
@@ -53,6 +56,7 @@
 </div>
 
 <div class="container mt-2" id="coding">
+  
   <ul class="nav nav-tabs">
       <li class="nav-item">
           <a class="nav-link active" data-bs-toggle="tab" href="#c">
