--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Hello World</title>
+  <meta charset ="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="assets/css/main.css">
   <script src="https://kit.fontawesome.com/7e7bae4e29.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/assets/css/uas.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -34,28 +35,31 @@
     </section>
 
     <!-- Nav Bar -->
- <div class"row">
 <div class="col-lg-6">
 <div class="ketiga">
   <h6>The “<span id="span1">HELLO WORLD</span>” program is the first step towards learning any programming language <br>
     and also one of the simplest programs you will learn. All you have to do is display the <br>
     message “<span id="span1">HELLO WORLD</span>” on the screen</h6>
 </div>
+</div>
+<div class="row">
+
+</div>
+<div class="col-lg-12">
+  <div class="wrapper">
+    <ul class="dynamic-txts">
+      <li><span>
+        COMPUTER PROGRAM</span></li>
+      <li><span>THAT DOES NOTHING
+    </span></li>
+      <li><span>BUT PRINT THE WORDS</span></li>
+      <li><span id="span1">ㅤ"HELLO WORLD"</span></li>
+    </ul>
   </div>
-   </div>
-<div class="wrapper">
-  <ul class="dynamic-txts">
-    <li><span>
-      COMPUTER PROGRAM</span></li>
-    <li><span>THAT DOES NOTHING
-  </span></li>
-    <li><span>BUT PRINT THE WORDS</span></li>
-    <li><span id="span1">ㅤ"HELLO WORLD"</span></li>
-  </ul>
 </div>
 
-<div class="container mt-2" id="coding">
-  
+
+<div class="container mt-4" id="coding">
   <ul class="nav nav-tabs">
       <li class="nav-item">
           <a class="nav-link active" data-bs-toggle="tab" href="#c">
@@ -174,6 +178,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
